Softphone text overlapping issue fix + Main search bar invisibility in smaller screens issue fix

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -104,7 +104,7 @@
 
 @media (max-width: 980px) and  (min-width: 150px) {
     #mainSearchBar {
-        display: none;
+        /* display: none; */
     }
 
     #headerAgentName {
